# Gigatrader

./: .env  .env.example  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  ALPACA_NOTES.md  Makefile  README.md  README_ui.md  RISK_PRESETS.md  Start_Gigatrader.bat  Start_UI.bat  _check_open_orders.py  architecture.md  config.example.yaml  pyproject.toml  pytest.ini  requirements-core.in  requirements-core.txt  requirements-dev.in  requirements-dev.txt  requirements-ml.in  requirements-ml.txt  requirements-ui.txt  requirements.txt
.streamlit/: secrets.toml
app/: __init__.py  alpaca_client.py  cli.py  config.py  rate_limit.py  state.py  streaming.py
backend/: __init__.py  api.py  app.py  pacing.py  schemas.py  server.py
backtest/: engine.py  metrics.py
cli/: __init__.py  backtest_v2.py  main.py  nightly_model_check.py  train_walkforward.py
codex_tasks/: 002_feed_accuracy_and_order_flow.md  003_unify_feed_and_order_flow.md
config/: extended_tickers.txt
configs/: market.yaml
core/: broker_config.py  clock.py  config.py  event_bus.py  indicators.py  interfaces.py  kill_switch.py  logging.py  market_hours.py  rate_limiter.py  runtime_flags.py  settings.py  utils.py
data/: alpaca_data_provider.py
dev/: arch_diag.py  diag_venv.bat  smoke.py
docs/: AI_RULES.md  agent-instructions.md  check_failure_investigation.md  codex-guardrails.md
execution/: alpaca_broker.py
fixtures/: bars_AAPL.csv  bars_MSFT.csv  bars_NVDA.csv  bars_SPY.csv  chain_AAPL.json  quotes_AAPL.csv  quotes_MSFT.csv  quotes_NVDA.csv  quotes_SPY.csv
golden/: sim_result.jsonl
notebooks/: sample_backtest.ipynb
reports/: 20251009_131736_report.html  README.md
risk/: manager.py
scripts/: archive_old_scripts.cmd  check_alpaca.py  cli.py  e2e_setup.py  ensure_playwright.py  gigatrader_menu.bat  gigatrader_menu_fixed.bat  install.ps1  last_test_summary.cmd  last_test_summary.ps1  one_click_install_and_run.bat  proc_utils.py  run_all_tests.cmd  run_all_tests.ps1  run_backtest.bat  run_backtest_example.sh  run_live.bat  run_paper.bat  run_paper_example.sh  run_trader.py  sanity.ps1  setup_and_launch.bat  setup_and_run.bat  setup_and_run.sh  start_backend.py  test_all.cmd  (+13 more)
(+363 files in other folders)
