[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trader"
version = "0.1.0"
requires-python = ">=3.11"
description = "Minimal runnable CLI + installers for a trading platform scaffold"
readme = "README.md"
dependencies = [
  "typer>=0.12",
  "pydantic>=2",
  "python-dotenv>=1",
  "rich>=13"
]

[project.scripts]
trade = "app.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
