[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gigatrader"
version = "0.1.0"
description = "Gigatrader - automated equities/options platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alpaca-py>=0.30,<1",
  "typer>=0.12",
  "rich>=13",
  "python-dotenv>=1",
  "pydantic>=2",
  "pandas>=2.2",
  "plotly>=5.22",
  "streamlit>=1.36",
  "websockets>=10"
]

[project.scripts]
trade = "app.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["app*"]
